--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </header>
         <main>
             <div id="texto-entrada">
-                <textarea cols="70" rows="40" placeholder="Coloque aqui el texto a encriptar o desencriptar..." class="texto-entrada"></textarea>
+                <textarea cols="70" rows="40" placeholder="Coloque aqui el texto a encriptar o desencriptar..." class="texto-entrada" autofocus required></textarea>
             </div>
             <div class="botones">
                 <button class="boton-accion">Encriptar</button>
