--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button class="boton-accion">Desencriptar</button>
             </div>
             <div id="imagen-inicial">
-                <img src="" alt="Descripcion cuadro sin elemento">
+                <img src="imagenes/beforeEncriptado.png" alt="Descripcion cuadro sin elemento">
             </div>
             <div id="texto-salida">
 
