Arreglando CSS del encabezado y añadiendo CSS de reset general

--- a/index.html
+++ b/index.html
@@ -6,19 +6,18 @@
         <meta name="viewport" content="width=device-width">
         <title>Desafio01Alura</title>
         <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" src="style.css">
+        <link rel="stylesheet" href="style.css">
 
     </head>
     <body>
-        <header>
-            <section class="cabeza-pagina">
-                <h1>Encriptador de texto</h1>
-                <img src="" alt="imagenEncabezado">
-            </section>
+        <header class="cabeza">
+            <div class="cabeza-pagina">
+                <p class="titulo">Codificador de texto</p><img class="logo" src="imagenes/encriptacion.jpg" alt="logodeencriptacion">
+            </div>
         </header>
         <main>
             <div id="texto-entrada">
-                <textarea cols="70" rows="40" placeholder="Coloque aqui el texto a encriptar o desencriptar..." class="texto-entrada" autofocus required></textarea>
+                <textarea cols="40" rows="20" placeholder="Coloque aqui el texto a encriptar o desencriptar..." class="texto-entrada" autofocus required></textarea>
             </div>
             <div class="botones">
                 <button class="boton-accion">Encriptar</button>
